cover photo added

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,8 @@ layout: archive
 
 ---
 
+<img src="/pics/yale.png" alt="Mountain View" style="width:1504px;height:458px;">
+
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% for post in paginator.posts %}
