--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -9,7 +9,7 @@
       {% if author.avatar contains "://" %}
       	<img src="{{ author.avatar }}" alt="{{ author.name }}">
       {% else %}
-      	<img src="{{ author.avatar | absolute_url }}" class="author__avatar" alt="{{ author.name }}">
+      	<img src="{{ author.avatar | absolute_url }}" class="author__avatar" alt="{{ author.name }}" style="width:150px;height:150px">
       {% endif %}
     </div>
   {% endif %}
