--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: archive
 
 ---
 
-<img src="/pics/yale.png" alt="Mountain View" style="width:1504px;height:458px;">
+<img src="/pics/yale2.png" alt="Mountain View" style="width:900px;height:200px;">
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
